namespaces/live.cloud-platform.service.justice.gov.uk/laa-claim-non-standard-magistrate-fee-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-claim-non-standard-magistrate-fee-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crm-4-5-7"
    cloud-platform.justice.gov.uk/application: "laa-claim-non-standard-magistrate-fee"
    cloud-platform.justice.gov.uk/owner: "CRM457@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-claim-non-standard-magistrate-fee-backend"
    cloud-platform.justice.gov.uk/team-name: "ministryofjustice"
    cloud-platform.justice.gov.uk/review-after: "2023-07-18"
